# pyre

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/pyre/: __init__.py
