[project]
name = "pyre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paulo Vieira", email = "paulocvieirajunior@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "ANN",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ANN"]
"docs/**/*" = ["ANN"]